casi terminado el primer punto